modify the delete function, fix out of bound error, search if txt file exist before running the program